# biblioth-que21008

biblioth-que21008-main/: CHANGELOG.md  GeoPandas.ipynb  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SUMMARY.md  QUICK_REFERENCE.md  bibo_21008_notebook.ipynb  bokeh.ipynb
biblioth-que21008-main/bibo_21008_project/bibo_21008_project/: pyproject.toml
biblioth-que21008-main/bibo_21008_project/bibo_21008_project/bibo_21008/: ELECTORAL_MAPS.md  __init__.py  electoral_maps.py  plots.py
biblioth-que21008-main/bibo_21008_project/bibo_21008_project/bibo_21008.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
biblioth-que21008-main/mrshape/: mrt_admbnda_adm0_ansade_20240327.dbf  mrt_admbnda_adm0_ansade_20240327.sbn  mrt_admbnda_adm0_ansade_20240327.sbx  mrt_admbnda_adm0_ansade_20240327.shp  mrt_admbnda_adm0_ansade_20240327.shp.xml  mrt_admbnda_adm0_ansade_20240327.shx  mrt_admbnda_adm1_ansade_20240327.dbf  mrt_admbnda_adm1_ansade_20240327.sbn  mrt_admbnda_adm1_ansade_20240327.sbx  mrt_admbnda_adm1_ansade_20240327.shp  mrt_admbnda_adm1_ansade_20240327.shp.xml  mrt_admbnda_adm1_ansade_20240327.shx  mrt_admbnda_adm2_ansade_20240327.dbf  mrt_admbnda_adm2_ansade_20240327.sbn  mrt_admbnda_adm2_ansade_20240327.sbx  mrt_admbnda_adm2_ansade_20240327.shp  mrt_admbnda_adm2_ansade_20240327.shp.xml  mrt_admbnda_adm2_ansade_20240327.shx  (+20 more)
bibo_21008_project/bibo_21008_project/: README.md  pyproject.toml
bibo_21008_project/bibo_21008_project/bibo_21008/: __init__.py  plots.py  styles.py
bibo_21008_project/bibo_21008_project/bibo_21008.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
