[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibo_21008"
version = "0.1.0"
description = "Personal plotting library with a consistent style (bibo_21008)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "geopandas>=0.12",
    "bokeh>=3.0",
    "shapely>=2.0",
    "pandas>=1.5"
]

[tool.setuptools]
packages = ["bibo_21008"]
